# JSONValidator

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
jsonvalidator/: __init__.py  validate_json.py
test/: test_validate_json.py
