[project]
name = "jsonvalidator"
version = "0.1.0"
description = "A package implementing an application to validate JSON"
authors = [
    {name = "Samuel B. Johnson", email = "sabjohnso.dev@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "jsonschema (>=4.24.0,<5.0.0)"

]

[project.scripts]
validate-json = "jsonvalidator:validate_json_app"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.dev.dependencies]
mypy = "^1.16.0"
pytest = "^8.4.0"
poetry = "^2.1.3"
jedi = "^0.19.2"
ruff = "^0.11.13"
importmagic = "^0.1.7"
black = "^25.1.0"
ipython = "^9.3.0"
types-jsonschema = "^4.24.0.20250528"
pre-commit = "^4.2.0"
